Added some search get requests

--- a/src/app/component/search/search.component.html
+++ b/src/app/component/search/search.component.html
@@ -44,4 +44,9 @@
 			</mat-card>
 		</div>
 	</mat-grid-list>
+	
+
+	<div class="search-results">
+		<p *ngFor = "let user of searchResponse.element | async">user.firstName</p>
+	</div>
 </div>
