--- a/src/app/component/department/department.component.css
+++ b/src/app/component/department/department.component.css
@@ -1,33 +1,69 @@
-h1 {
+/* h1 {
     font-size: 2.0em;
     margin: 20px 0 0 0;
     font-weight: 400;   
-}
-h3 { 
+} */
+/* h3 { 
     color: blue;
-}
+} */
 table {
-    border-collapse: collapse;
+  border-collapse: collapse;
 }
 table, th, td {
-    border: 1px solid black;
-    font-size:17px;
+  border: 1px solid black;
+  font-size:17px;
 }
 input {
-    width: 225px;
-    margin: 8px 0;
-    background-color: #dfdfdf;
-    font-size:17px;
+  width: 225px;
+  margin: 8px 0;
+  background-color: #dfdfdf;
+  font-size:17px;
 }
 button {
-    background-color: #008CBA;
-    color: white;
+  background-color: #008CBA;
+  color: white;
 }
-.error{
-    color: red;
-    font-size: 20px;
+ .grid{
+  width: 80%;
+  text-align: center;
 }
-.success{
-    color: green;
-    font-size: 20px;
-} 
+
+.full-width{
+   width: 80%;
+}
+
+.example-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+}
+  
+  /* .example-header {
+    min-height: 64px;
+    padding: 8px 24px 0;
+  }
+  
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+  
+  .mat-table {
+    overflow: auto;
+    max-height: 500px;
+  } */
+
+  .container{
+    display: block;
+    text-align: center;
+    margin: auto;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    }
+    
+    .card{
+    margin:2%;
+    padding:2%;
+    width:65%;
+    } 
