--- a/src/app/component/role/role.component.html
+++ b/src/app/component/role/role.component.html
@@ -1,48 +1,84 @@
-<div style="text-align:center;border:2px solid black;">
-<div class="role" style="text-align:center;border:2px solid black;">
-    <mat-card  *ngFor="let role of allRoles" style="text-align:center;border:2px solid black;">
-        <mat-grid-list cols="2" rowHeight="2:1">
-          <mat-grid-tile>
-            {{role.roleName}}<br>{{role.roleType}} <br> {{role.roleDescription}}<br>
-          </mat-grid-tile>
-          <mat-grid-tile>
-              Creation - {{role.privilege.creationPrivilege}}<br>
-              Deletion - {{role.privilege.deletionPrivilege}}<br>
-              Updation - {{role.privilege.updationPrivilege}}<br>
-              Read - {{role.privilege.readPrivilege}}
-          </mat-grid-tile>
-        </mat-grid-list>
+<div class="container .mat-display-3" style="padding:1%">
+  <div class="card" style="margin:2% auto;" *ngIf="!isCreate && !isUpdate">
+    <mat-card class=" mat-elevation-z5" *ngFor="let role of allRoles" style="margin:0.4%;">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>{{role.roleName}}</mat-card-title>
+        <mat-card-subtitle>{{role.roleType}}</mat-card-subtitle>
+      </mat-card-header>
+
+      <mat-card-content>
+        <table>
+          <tr>
+            <td style="width:90%;text-align:left">
+              <p>
+                {{role.roleDescription}}
+                <br>
+                <br>
+                <mat-chip-list>
+                  <mat-chip *ngIf="role.privilege.creationPrivilege" selected="true" [color]="primary">Creation</mat-chip>
+                  <mat-chip *ngIf="role.privilege.deletionPrivilege" selected="true" [color]="primary">Deletion</mat-chip>
+                  <mat-chip *ngIf="role.privilege.updationPrivilege" selected="true" [color]="primary">Updation</mat-chip>
+                  <mat-chip *ngIf="role.privilege.readPrivilege" selected="true" [color]="primary">Read</mat-chip>
+                  <mat-icon mat-svg-icon="person" style="color:grey"></mat-icon>
+                </mat-chip-list>
+              </p>
+            </td>
+            <td>
+              <button mat-raised-button style="margin-bottom:5%;width:100%">
+                <i class="material-icons small">edit</i> Update</button>
+              <button mat-raised-button style="color:red;width:100%" (click)="openDialog(role)">
+                <i class="material-icons small">delete</i> Delete</button>
+            </td>
+          </tr>
+        </table>
+      </mat-card-content>
+
+    </mat-card>
+  </div>
+</div>
+
+<div class="create-form" *ngIf="isCreate">
+  <mat-grid-list cols="1" rowHeight="3:1">
+    <mat-grid-tile>
+      <mat-card class="grid">
+        <h1>Add a new Role</h1>
+        <form [formGroup]="rForm" (ngSubmit)="onRoleFormSubmit(rForm.value)">
+          <mat-form-field class="full-width">
+            <input matInput placeholder="Role Name" formControlName="roleName">
+          </mat-form-field>
+          <mat-form-field class="full-width">
+            <mat-select placeholder="Role Type" formControlName="roleType" name="roleType">
+              <mat-option value="system" (click)="isDepartment = false">System</mat-option>
+              <mat-option value="department" (click)="departmentToggle()">Department</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field class="full-width" *ngIf="isDepartment">
+            <mat-select placeholder="Department" formControlName="departmentId" name="departmentId">
+              <mat-option value="java">Java</mat-option>
+              <mat-option value="angular">Angular</mat-option>
+              <mat-option value="dotnet">Dot Net</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field class="full-width">
+            <textarea matInput placeholder="Role Description" formControlName="roleDescription"></textarea>
+          </mat-form-field>
+          <section class="example-section">
+            <h3>Privileges</h3>
+            <mat-checkbox class="example-margin" formControlName="creationPrivilege">Creation</mat-checkbox>
+            <mat-checkbox class="example-margin" formControlName="deletionPrivilege">Deletion</mat-checkbox>
+            <mat-checkbox class="example-margin" formControlName="updationPrivilege">Updation</mat-checkbox>
+            <mat-checkbox class="example-margin" formControlName="readPrivilege">Read</mat-checkbox>
+          </section>
+          <br>
+          <br>
+          <button mat-raised-button color="primary" class="full-width">Submit</button>
+        </form>
       </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
 </div>
-	<mat-grid-list cols="1" rowHeight="2:1" *ngIf="isCreate">
-		<mat-grid-tile >
-			<mat-card class="grid">
-				<h1>Add a new Role</h1>
-				<mat-form-field class="full-width">
-					<input matInput placeholder="Role Name" [formControl]="roleName">
-				</mat-form-field>
-				<mat-form-field class="full-width">
-					<mat-select placeholder="Role Type" [formControl]="roleType">
-						<mat-option value="option">Option</mat-option>
-					</mat-select>
-				</mat-form-field>
-				<mat-form-field class="full-width">
-					<mat-select placeholder="Department" [formControl]="departmentId">
-						<mat-option value="option">Option</mat-option>
-					</mat-select>
-				</mat-form-field>
-				<mat-form-field class="full-width">
-					<textarea matInput placeholder="Role Description" [formControl]="roleDescription"></textarea>
-				</mat-form-field>
-				<section class="example-section">
-          <h3>Privileges</h3>
-					<mat-checkbox class="example-margin">Creation</mat-checkbox>
-					<mat-checkbox class="example-margin">Deletion</mat-checkbox>
-					<mat-checkbox class="example-margin">Updation</mat-checkbox>
-					<mat-checkbox class="example-margin">Read</mat-checkbox>
-				</section><br><br>
-        <button mat-raised-button color="primary" class="full-width">Submit</button>
-			</mat-card>
-		</mat-grid-tile>
-	</mat-grid-list>
-</div>
+<button (click)="toggleCreate()" mat-fab style="left:95%; bottom:2%; position: fixed">
+  <i class="material-icons small" *ngIf="!isCreate">add</i>
+  <i class="material-icons small" *ngIf="isCreate">clear</i>
+</button>
