dept partially working

--- a/src/app/component/create-department/create-department.component.html
+++ b/src/app/component/create-department/create-department.component.html
@@ -1,3 +1,20 @@
+ <!--StandardResponse div-->
+<div class="example-container">
+		<div class="row section" *ngIf="standardResponse.code">
+		  <mat-grid-list cols="1" rowHeight="2:1">
+			  <mat-grid-tile>
+				<mat-card class="grid">
+			<h3>{{standardResponse.message}}</h3>
+			<br>
+			<button class="btn waves-effect waves-light btn-medium" type="submit" style="width:50%" [routerLink]="['/department']">OK 
+			</button>
+			   </mat-card>
+			 </mat-grid-tile>
+		  </mat-grid-list>
+		</div>
+</div>
+
+ <!--Creation div -->
 <div class="example-container">
             <form [formGroup]="departmentForm" (ngSubmit)="onDepartmentFormSubmit()">
 	<mat-grid-list cols="1" rowHeight="2:1">
@@ -16,9 +33,9 @@
 				</mat-form-field>
 			    </div>
 				<div>		
-                   <button mat-raised-button color="primary">Create</button>
-                   <button mat-raised-button color="primary" [routerLink]="['/department']">Cancel</button>
-               </div>
+              <button mat-raised-button color="primary">Create</button>
+              <button mat-raised-button color="primary" [routerLink]="['/department']">Cancel</button>
+        </div>
 			</mat-card>
 		</mat-grid-tile>
 	</mat-grid-list>
