--- a/src/app/component/delete-modal/delete-modal.component.html
+++ b/src/app/component/delete-modal/delete-modal.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>Are you sure you want to delete this Role?</h1>
 <mat-dialog-content>
-  {{role.roleName}}
+  <h5>"{{name}}"</h5>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button type="submit" [mat-dialog-close]="true">Yes</button>
-  <button mat-button type="button" mat-dialog-close [mat-dialog-close]="false">No</button>
+  <button mat-raised-button color="warn" type="submit" [mat-dialog-close]="true">Yes</button>
+  <button mat-raised-button color="primary" type="button" mat-dialog-close [mat-dialog-close]="false">No</button>
 </mat-dialog-actions>
