--- a/src/app/component/role/role.component.scss
+++ b/src/app/component/role/role.component.scss
@@ -34,7 +34,7 @@
   background: #f2edda;
   padding: 7px;
   font-size: .9em;
-  margin-top: 0;
+  margin-top: -2%;
   color: red;
   margin-bottom: 1%;
   display: inline-block;
