--- a/src/app/component/role/role.component.html
+++ b/src/app/component/role/role.component.html
@@ -78,7 +78,8 @@
           </section>
           <br>
           <br>
-          <button mat-raised-button color="primary" class="full-width" [disabled]="!rForm.valid">Submit</button>
+          <button mat-raised-button color="primary" class="half-width" [disabled]="!rForm.valid">Submit</button>
+          <button mat-raised-button color="accent" class="half-width" (click)="rForm.reset();">Reset</button>
         </form>
       </mat-card>
 </div>
