--- a/src/app/component/search/search.component.html
+++ b/src/app/component/search/search.component.html
@@ -1,7 +1,7 @@
 <div class = "search container">
 		<h1>User Search</h1>
 
-	<mat-grid-list cols = 1>
+	<mat-grid-list cols = "1">
 		<div class = "searchForm-container container">
 			<mat-card>
 				<mat-grid-list cols = "3" rowHeight = "10:2">
@@ -12,12 +12,12 @@
 				  	</mat-grid-tile>
 				  	<mat-grid-tile>
 				  		<mat-form-field class = "full-width-field">
-				    		<input #lastName matInput placeholder="Last Name" type = "text" name="lastName" formControlName = "lastName" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
+				    		<input #lastName matInput placeholder="Last Name" type = "text" name="lastName" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
 				  		</mat-form-field>
 				  	</mat-grid-tile>
 				  	<mat-grid-tile>
 				  		<mat-form-field class = "full-width-field">
-				    		<input #email matInput placeholder="Email" type = "text" name="email" formControlName = "email" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
+				    		<input #email matInput placeholder="Email" type = "text" name="email" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
 				  		</mat-form-field>
 				  	</mat-grid-tile>
 				</mat-grid-list>
@@ -35,7 +35,7 @@
 					<mat-grid-tile>
 						<mat-form-field class = "full-width-field">
 	    					<mat-select #roles placeholder="Select Role" multiple name = "roles" (change)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
-	      						<mat-option value="option">Option</mat-option>
+	      						<mat-option *ngFor = "let role of allRoles" value="{{role.roleName}}">{{role.roleName}}</mat-option>
 	    					</mat-select>
 	    					<mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
 	 					</mat-form-field>
@@ -44,9 +44,45 @@
 			</mat-card>
 		</div>
 	</mat-grid-list>
-	
-
-	<div class="search-results">
-		<p *ngFor = "let user of searchResponse.element | async">user.firstName</p>
+	<br>
+	<br>
+	<div class="search-results container">
+		<mat-paginator [length]=[pageLength]
+              [pageSize]=[pageSize]
+              [pageSizeOptions]="[3, 6, 9, 12]"
+              (page)="pageEventTrigger($event)">
+		</mat-paginator>
+		<h2></h2>
+		<mat-grid-list cols = "3" rowHeight = "2:2">
+			<mat-grid-tile *ngFor = "let user of pagedUser">
+				<mat-card class="example-card">
+		  			<mat-card-header>
+					    <div mat-card-avatar class="example-header-image"></div>
+					    <mat-card-title>{{user.firstName | uppercase}}</mat-card-title>
+					    <mat-card-subtitle>{{user.emailId}}</mat-card-subtitle>
+					 </mat-card-header>
+					  <mat-card-content>
+					    <mat-grid-list cols = "1" rowHeight = "7:1">
+					    	<mat-grid-tile>
+					    		<p><span><strong>Department:</strong> JAVA, .NET</span></p>
+					    	</mat-grid-tile>
+					    	<mat-grid-tile>
+					    		<p><span><strong>Location:</strong>{{user.address.city}} {{user.address.country}}</span></p>
+					    	</mat-grid-tile>
+					    	<mat-grid-tile>
+					    		<p><strong>Phone:</strong> {{user.phoneNumber}}</p>
+					    	</mat-grid-tile>
+					    	<mat-grid-tile>
+					    		<p><strong>Roles:</strong><span *ngFor = "let role of user.roles">{{role.roleName}}</span></p>
+					    	</mat-grid-tile>
+					    </mat-grid-list>
+					  </mat-card-content>
+					  <mat-card-actions>
+					    <button mat-button>Delete</button>
+					    <button mat-button>View and Edit</button>
+					  </mat-card-actions>
+				</mat-card>
+		</mat-grid-tile>
+		</mat-grid-list>
 	</div>
 </div>
