--- a/src/app/component/search/search.component.html
+++ b/src/app/component/search/search.component.html
@@ -4,20 +4,20 @@
 	<mat-grid-list cols = "1">
 		<div class = "searchForm-container container">
 			<mat-card>
-				<mat-grid-list cols = "3" rowHeight = "10:2">
+				<mat-grid-list cols = "3" rowHeight = "10:3">
 					<mat-grid-tile>
 						<mat-form-field class = "full-width-field">
-				    		<input #firstName matInput placeholder="First Name" type = "text" name="firstName" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
+				    		<input #firstName matInput placeholder="First Name"   class="NoBoxShadow" type = "text" name="firstName" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
 				  		</mat-form-field>
 				  	</mat-grid-tile>
 				  	<mat-grid-tile>
 				  		<mat-form-field class = "full-width-field">
-				    		<input #lastName matInput placeholder="Last Name" type = "text" name="lastName" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
+				    		<input matInput #lastName class="NoBoxShadow" placeholder="Last Name" type = "text" name="lastName" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
 				  		</mat-form-field>
 				  	</mat-grid-tile>
 				  	<mat-grid-tile>
 				  		<mat-form-field class = "full-width-field">
-				    		<input #email matInput placeholder="Email" type = "text" name="email" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
+				    		<input #email matInput placeholder="Email" class="NoBoxShadow" type = "text" name="email" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
 				  		</mat-form-field>
 				  	</mat-grid-tile>
 				</mat-grid-list>
@@ -25,8 +25,7 @@
 					<mat-grid-tile>
 						<mat-form-field class = "full-width-field">
 	    					<mat-select #departments placeholder="Select Department" multiple name="departments" (change)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
-	      						<mat-option value="option">Option</mat-option>
-	      						<mat-option value ="option2">Option 2</mat-option>
+	      						<mat-option *ngFor = "let department of allDepartments" value="{{department.departmentName}}">{{department.departmentName}}</mat-option>
 	    					</mat-select>
 	    					<mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
 	 					</mat-form-field>
@@ -49,7 +48,7 @@
 	<div class="search-results container">
 		<mat-paginator [length]=[pageLength]
               [pageSize]=[pageSize]
-              [pageSizeOptions]="[3, 6, 9, 12]"
+              [pageSizeOptions]="pageSizeOptions"
               (page)="pageEventTrigger($event)">
 		</mat-paginator>
 		<h2></h2>
@@ -58,28 +57,30 @@
 				<mat-card class="example-card">
 		  			<mat-card-header>
 					    <div mat-card-avatar class="example-header-image"></div>
-					    <mat-card-title>{{user.firstName | uppercase}}</mat-card-title>
+					    <mat-card-title>{{user.firstName | uppercase}} {{user.lastName | uppercase}}</mat-card-title>
 					    <mat-card-subtitle>{{user.emailId}}</mat-card-subtitle>
 					 </mat-card-header>
 					  <mat-card-content>
 					    <mat-grid-list cols = "1" rowHeight = "7:1">
 					    	<mat-grid-tile>
-					    		<p><span><strong>Department:</strong> JAVA, .NET</span></p>
+					    		<p><span><strong>Departments:</strong> <mat-chip *ngFor = "let department of user.departments"  [color]="primary">{{department.departmentName}}</mat-chip></span></p>
 					    	</mat-grid-tile>
 					    	<mat-grid-tile>
-					    		<p><span><strong>Location:</strong>{{user.address.city}} {{user.address.country}}</span></p>
+					    		<p><span><strong>Location:</strong>{{user.address.city}}, {{user.address.country}}</span></p>
 					    	</mat-grid-tile>
 					    	<mat-grid-tile>
 					    		<p><strong>Phone:</strong> {{user.phoneNumber}}</p>
 					    	</mat-grid-tile>
 					    	<mat-grid-tile>
-					    		<p><strong>Roles:</strong><span *ngFor = "let role of user.roles">{{role.roleName}}</span></p>
-					    	</mat-grid-tile>
+					    	<mat-chip-list>
+					    		<p><strong>Roles:</strong><mat-chip *ngFor = "let role of user.roles">{{role.roleName}}</mat-chip></p>
+					    	</mat-chip-list>
+					    </mat-grid-tile>
 					    </mat-grid-list>
 					  </mat-card-content>
 					  <mat-card-actions>
-					    <button mat-button>Delete</button>
-					    <button mat-button>View and Edit</button>
+					    <button mat-button (click) = "deleteUser(user.id)">Delete</button>
+					    <button mat-button (click) = "visitUser(user.id)">View and Edit</button>
 					  </mat-card-actions>
 				</mat-card>
 		</mat-grid-tile>
