registration_complete_tab_navbar_added

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -9,7 +9,7 @@
           </div>
           <div class="row">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Password" formControlName="password" required>
+            <input type="password" matInput placeholder="Password" formControlName="password" required>
           </mat-form-field>
           </div>
 <button mat-raised-button color="primary" class="b">Login</button>
