--- a/src/app/component/tabs/tabs.component.html
+++ b/src/app/component/tabs/tabs.component.html
@@ -1,13 +1,13 @@
 <div class="tab-padding">
 <nav mat-tab-nav-bar>
 
-<span *ngIf="1">
+<span *ngIf="deptFlag">
    <a mat-tab-link [routerLink]="['/department']" routerLinkActive #d="routerLinkActive" [active]="d.isActive" >
     Department
   </a>
 </span>
 
-<span *ngIf="1">
+<span *ngIf="roleFlag">
    <a mat-tab-link [routerLink]="['/role']" routerLinkActive #r="routerLinkActive" [active]="r.isActive">
     Role
   </a>
@@ -15,20 +15,5 @@
 
 </nav>
 </div>
-
-<!-- <ul class=" cyan tabs tabs-transparent">
-			<li class="tab" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-				<a [routerLink]="['/user', userId]">User Profile</a>
-			</li>
-			<li class="tab"  [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-				<a routerLink="/role-manager" *ngIf="roleFlag">Role</a>
-			</li>
-			<li class="tab"  [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-				<a routerLink="/department" *ngIf="deptFlag">Department</a>
-			</li>
-			<li class="right" style="margin-right:2%;">
-				<h5 style="margin-bottom:-3%;font-size: 23px;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">Welcome {{firstName}}</h5>
-			</li>
-		</ul> -->
 
 <router-outlet></router-outlet>
