--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -11,7 +11,7 @@
   	<div class = "menu-items" *ngIf="isLoggedIn">
   		<a (click)="logout()">Logout</a>&nbsp;&nbsp;&nbsp;&nbsp;
   		<a [routerLink]="['/search']"><mat-icon>search</mat-icon></a>&nbsp;&nbsp;&nbsp;&nbsp;
-  		<a [routerLink]="['/user', userId]"><mat-icon>menu</mat-icon></a>
+  		<a (click)="navigateToUserProfile()"><mat-icon>account_circle</mat-icon></a>
   	</div>
 </mat-toolbar>
 </div>
