--- a/src/app/component/search/search.component.html
+++ b/src/app/component/search/search.component.html
@@ -7,17 +7,17 @@
 				<mat-grid-list cols = "3" rowHeight = "10:3">
 					<mat-grid-tile>
 						<mat-form-field class = "full-width-field">
-				    		<input #firstName matInput placeholder="First Name"   class="NoBoxShadow" type = "text" name="firstName" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
+				    		<input #firstName matInput placeholder="First Name"   class="NoBoxShadow" name="firstName" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
 				  		</mat-form-field>
 				  	</mat-grid-tile>
 				  	<mat-grid-tile>
 				  		<mat-form-field class = "full-width-field">
-				    		<input matInput #lastName class="NoBoxShadow" placeholder="Last Name" type = "text" name="lastName" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
+				    		<input matInput #lastName class="NoBoxShadow" placeholder="Last Name" name="lastName" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
 				  		</mat-form-field>
 				  	</mat-grid-tile>
 				  	<mat-grid-tile>
 				  		<mat-form-field class = "full-width-field">
-				    		<input #email matInput placeholder="Email" class="NoBoxShadow" type = "text" name="email" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
+				    		<input #email matInput placeholder="Email" class="NoBoxShadow" name="email" (keyup)="search(firstName.value, lastName.value, email.value, departments.value, roles.value)">
 				  		</mat-form-field>
 				  	</mat-grid-tile>
 				</mat-grid-list>
@@ -61,7 +61,7 @@
 					    <mat-card-subtitle>{{user.emailId}}</mat-card-subtitle>
 					 </mat-card-header>
 					  <mat-card-content>
-					    <mat-grid-list cols = "1" rowHeight = "7:1">
+					    <mat-grid-list style="justify-content: left !important;" cols = "1" rowHeight = "7:1">
 					    	<mat-grid-tile>
 					    		<p><span><strong>Departments:</strong> <mat-chip *ngFor = "let department of user.departments"  [color]="primary">{{department.departmentName}}</mat-chip></span></p>
 					    	</mat-grid-tile>
@@ -79,7 +79,7 @@
 					    </mat-grid-list>
 					  </mat-card-content>
 					  <mat-card-actions>
-					    <button mat-button (click) = "deleteUser(user.id)">Delete</button>
+					    <button mat-button (click) = "openUserDeleteDialog(user)">Delete</button>
 					    <button mat-button (click) = "visitUser(user.id)">View and Edit</button>
 					  </mat-card-actions>
 				</mat-card>
