--- a/src/app/component/department/department.component.css
+++ b/src/app/component/department/department.component.css
@@ -1,29 +1,13 @@
-/* h1 {
-    font-size: 2.0em;
-    margin: 20px 0 0 0;
-    font-weight: 400;   
-} */
-/* h3 { 
-    color: blue;
-} */
-table {
-  border-collapse: collapse;
-}
-table, th, td {
-  border: 1px solid black;
-  font-size:17px;
-}
+
+
 input {
-  width: 225px;
-  margin: 8px 0;
+  width: 325px;
+  margin: 8px;
   background-color: #dfdfdf;
   font-size:17px;
 }
-button {
-  background-color: #008CBA;
-  color: white;
-}
- .grid{
+
+.grid{
   width: 80%;
   text-align: center;
 }
@@ -37,23 +21,8 @@ button {
   flex-direction: column;
   min-width: 300px;
 }
-  
-  /* .example-header {
-    min-height: 64px;
-    padding: 8px 24px 0;
-  }
-  
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
-  
-  .mat-table {
-    overflow: auto;
-    max-height: 500px;
-  } */
 
-  .container{
+.container{
     display: block;
     text-align: center;
     margin: auto;
@@ -62,8 +31,8 @@ button {
     align-items: center;
     }
     
-    .card{
+.card{
     margin:2%;
     padding:2%;
     width:65%;
-    } 
+    }  
