--- a/src/app/component/userprofile/userprofile.component.html
+++ b/src/app/component/userprofile/userprofile.component.html
@@ -1,18 +1,156 @@
-<div class="main">
-  <mat-card>
-    <div class="center" *ngIf="!isUpdate">
-      <h1 class="center"> USER PROFILE</h1>
-      <div class="row">
-        <i class="material-icons prefix">account_circle</i>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="First Name" value={{user.firstName}} readonly>
-        </mat-form-field>
-        <i class="material-icons prefix">account_circle</i>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Last Name" value={{user.lastName}} readonly>
-        </mat-form-field>
-      </div>
+<div style="margin-top:15%;">
+<h3>Assigned Roles</h3>
+<mat-list *ngFor="let role of presentRoles">
+<mat-list-item style="text-align:center;" (click)="revokeRoleToUser(user.userId,role)">{{role.roleName}}&nbsp;<button mat-mini-fab>-</button></mat-list-item>
+</mat-list>
+<h3>Available Roles</h3>
+<mat-list *ngFor="let availableRole of availableRoles">
+<mat-list-item (click)="grantRoleToUser(user.userId,availableRole)">{{availableRole.roleName}}&nbsp;<button mat-mini-fab>+</button></mat-list-item>
+</mat-list>
+</div> 
 
+
+
+<div class="main">
+  <mat-card class="view" *ngIf="!isUpdate">
+    <div class="center" >
+      <h3 class="center">
+        <b> USER PROFILE </b>
+      </h3><br>
+
+      <table>
+        <tr>
+          <td style="width:5%;text-align:right">
+            <i class="large material-icons md-18" style="font-size:35px">account_circle</i>
+          </td>
+          <td style="width:35%;text-align:left">
+            <i style="font-size:14px;color:grey">First Name</i>
+            <h6>
+              <b>{{user.firstName}}</b>
+            </h6>
+          </td>
+          <td style="width:40%;text-align:right">
+            <i class="large material-icons md-18" style="font-size:35px">account_circle</i>
+          </td>
+          <td style="width:5%;text-align:left">
+            <i style="font-size:14px;color:grey">Last Name</i>
+            <h6>
+              <b>{{user.lastName}}</b>
+            </h6>
+          </td>
+        </tr>
+
+        <tr>
+          <td style="width:10%;text-align:right">
+            <i class="large material-icons md-18" style="font-size:35px">insert_emoticon</i>
+          </td>
+          <td style="width:35%;text-align:left">
+            <i style="font-size:14px;color:grey">Gender</i>
+           <h6>
+              <b>{{user.gender}}</b>
+            </h6>
+          </td>
+          <td style="width:10%;text-align:right">
+            <i class="large material-icons md-18" style="font-size:35px">call</i>
+          </td>
+          <td style="width:35%;text-align:left">
+            <i style="font-size:14px;color:grey">Phone Number</i>
+            <h6>
+              <b>{{user.phoneNumber}}</b>
+            </h6>
+          </td>
+        </tr>
+
+        <tr>
+          <td style="width:10%;text-align:right">
+            <i class="large material-icons md-18" style="font-size:35px">location_city</i>
+          </td>
+          <td style="width:35%;text-align:left">
+            <i style="font-size:14px;color:grey">Door Number</i>
+            <h6>
+              <b>{{address.doorNumber}}</b>
+            </h6>
+          </td>
+          <td style="width:10%;text-align:right">
+            <i class="large material-icons md-18" style="font-size:35px">time_to_leave</i>
+          </td>
+          <td style="width:35%;text-align:left">
+            <i style="font-size:14px;color:grey">street Name</i>
+            <h6>
+              <b>{{address.streetName}}</b>
+            </h6>
+          </td>
+        </tr>
+
+        <tr>
+          <td style="width:10%;text-align:right">
+            <i class="large material-icons md-18" style="font-size:35px">pin_drop</i>
+          </td>
+          <td style="width:35%;text-align:left">
+            <i style="font-size:14px;color:grey">Area</i>
+            <h6>
+              <b>{{address.area}}</b>
+            </h6>
+          </td>
+          <td style="width:10%;text-align:right">
+            <i class="large material-icons md-18" style="font-size:35px">pin_drop</i>
+          </td>
+          <td style="width:35%;text-align:left">
+            <i style="font-size:14px;color:grey">city</i>
+            <h6>
+              <b>{{address.city}}</b>
+            </h6>
+          </td>
+        </tr>
+
+        <tr>
+          <td style="width:10%;text-align:right">
+           <i class="large material-icons md-18" style="font-size:35px">pin_drop</i>
+          </td>
+          <td style="width:25%;text-align:left">
+            <i style="font-size:14px;color:grey">state</i>
+            <h6>
+              <b>{{address.state}}</b>
+            </h6>
+          </td>
+          <td style="width:10%;text-align:right">
+            <i class="large material-icons md-18" style="font-size:35px">pin_drop</i>
+          </td>
+          <td style="width:25%;text-align:left">
+            <i style="font-size:14px;color:grey">country</i>
+            <h6>
+              <b>{{address.country}}</b>
+            </h6>
+          </td>
+        </tr>
+        <tr>
+          <td style="width:10%;text-align:right">
+            <i class="large material-icons md-18" style="font-size:35px">fiber_pin</i>
+          </td>
+          <td style="width:25%;text-align:left">
+            <i style="font-size:14px;color:grey">country</i>
+            <h6>
+              <b>{{address.zipcode}}</b>
+            </h6>
+          </td>
+        </tr>
+        <tr>
+          <td style="width:10%;"></td>
+          <td style="width:35%;"></td>
+          <td style="width:10%;"></td>
+          <td>
+              <div style="text-align:left">
+                <button mat-raised-button color="primary" (click)="updateToggle()">
+                  <i class="material-icons small">create</i> UPDATE USER DETAILS</button>
+              </div>
+          </td>
+        </tr>
+      </table>
+      
+    </div>
+  </mat-card>
+
+  <!-- 
       <div class="row">
         <i class="material-icons prefix">insert_emoticon</i>
         <mat-form-field class="full-width">
@@ -64,11 +202,14 @@
         <button mat-raised-button color="primary" (click)="updateToggle()"> <i class="material-icons small" >create</i> UPDATE USER DETAILS</button>
       </div>
     </div>
-  </mat-card>
+    </mat-card> -->
 
   <mat-card>
     <div class="center" *ngIf="isUpdate">
-      <h1 class="center"> USER PROFILE UPDATE</h1>
+        <h3 class="center">
+            <b> USER PROFILE UPDATE </b>
+          </h3><br>
+    
       <form name="myForm" #validateForm="ngForm" (ngSubmit)="onSubmit()" novalidate>
         <div>
           <i class="material-icons prefix">account_circle</i>
@@ -102,7 +243,7 @@
           <i class="material-icons prefix">call</i>
           <mat-form-field class="full-width">
             <input #phoneNumber (keyup)="validatePhoneNumberField(phoneNumber.value)" matInput placeholder="Phone Number" [(ngModel)]="user.phoneNumber"
-             name="user.phoneNumber" [ngModelOptions]="{standalone: true}" #phoneNumber="ngModel" minlength="10" maxlength="10"
+              name="user.phoneNumber" [ngModelOptions]="{standalone: true}" #phoneNumber="ngModel" minlength="10" maxlength="10"
               required>
             <span class="font" *ngIf="!phone">Please input a valid number</span>
           </mat-form-field>
@@ -117,11 +258,11 @@
               name="address.doorNumber" [ngModelOptions]="{standalone: true}" required>
             <span class="font" *ngIf="!door">door number cannot be null</span>
           </mat-form-field>
-          </div>
-          <!-- 
+        </div>
+        <!-- 
         </div>
         <div> -->
-          <div>
+        <div>
           <i class="material-icons prefix">time_to_leave</i>
           <mat-form-field class="full-width">
             <input #streetName (keyup)="validateStreetName(streetName.value)" matInput placeholder="Street Name" [(ngModel)]="address.streetName"
@@ -151,18 +292,18 @@
         </div>
 
         <div> -->
-          
+
           <i class="material-icons prefix">pin_drop</i>
           <mat-form-field class="full-width">
             <input #state (keyup)="validateState(state.value)" matInput placeholder="State" [(ngModel)]="address.state" name="address.state"
               [ngModelOptions]="{standalone: true}" required>
             <span class="font" *ngIf="!state1">invalid state</span>
           </mat-form-field>
-          </div>
-          <!-- 
+        </div>
+        <!-- 
         </div>
         <div> -->
-          <div>
+        <div>
           <i class="material-icons prefix">pin_drop</i>
           <mat-form-field class="full-width">
             <input #country (keyup)="validateCountry(country.value)" matInput placeholder="Country" [(ngModel)]="address.country" name="address.country"
@@ -174,7 +315,7 @@
         <div> -->
           <i class="material-icons prefix">fiber_pin</i>
           <mat-form-field class="full-width">
-            <input #zipCode (keyup)="validateZipCode(zipCode.value)" matInput placeholder="Zip Code" [(ngModel)]="address.zipcode" name="address.zipcode"
+           <input #zipCode (keyup)="validateZipCode(zipCode.value)" matInput placeholder="Zip Code" [(ngModel)]="address.zipcode" name="address.zipcode"
               [ngModelOptions]="{standalone: true}" #zipcode="ngModel" minlength="6" maxlength="6" required>
             <span class="font" *ngIf="!zip">Please input a valid ZipCode</span>
           </mat-form-field>
@@ -185,14 +326,15 @@
     </button> -->
         <div class="center">
           <button mat-raised-button color="primary">
-          <i class="material-icons small" >create</i> UPDATE</button> 
-          
+            <i class="material-icons small">create</i> UPDATE</button>
+
           <button mat-raised-button color="primary" (click)="fetchUser()">
-              <i class="material-icons small" >cancel</i>  
-              CANCEL</button>
+            <i class="material-icons small">cancel</i>
+            CANCEL</button>
         </div>
 
       </form>
     </div>
   </mat-card>
 </div>
+
